examples/datalog/01_knowledge_graph/07_kg_rule_isolation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_rule_iso_a
Knowledge graph 'test_rule_iso_a' created.
Switched to knowledge graph: test_rule_iso_a
> .kg use test_rule_iso_a
Switched to knowledge graph: test_rule_iso_a
> +items[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'items'.
> +doubled(X, Y) :- items(X), Y = X * 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
